# llm-profiler

./: .gitignore  LICENSE  README.md  llm_profiler.py  pyproject.toml
examples/: profile_forward_vs_generate.py  profile_opt125m_int8.py
